--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
         />
         <link rel="apple-touch-icon" href="logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&display=swap" rel="stylesheet">
         <title>App</title>
     </head>
 
