--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,12 +7,12 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="App Description Here"
+            content="Collaborative Budgeting"
         />
         <link rel="apple-touch-icon" href="logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700&display=swap" rel="stylesheet">
-        <title>App</title>
+        <title>Kitty App</title>
     </head>
 
     <body>
